# log-ship

./: LICENSE.md  README.md
cargo_deb/assets/: log-ship.toml
cargo_deb/assets/scripts/: kern.py  sonicwall.py  web_servers.py
cargo_deb/maintainer-scripts/: log-ship.service  postinst  postrm  preinst
log-ship/: Cargo.toml  README.md  log-ship.toml
log-ship/common/: Cargo.toml
log-ship/common/src/: double_buf_writer.rs  iterators.rs  log_entry.rs  log_value.rs  mmap_vec.rs  std_utils.rs  storage.rs  test_utils.rs
log-ship/common/src/config/: config_file.rs  mod.rs
log-ship/common/src/query_parser/: main.rs  mod.rs  processor.rs  query_grammar.pest
log-ship/int_tests/: file_python_insert_field_ts_stdout.sh  file_python_insert_field_ts_stdout.toml  fortinet.toml  kern.py  metrics_insert_ts_stdout.sh  metrics_insert_ts_stdout.toml  stdin_python_insert_field_ts_tcp.sh  stdin_python_insert_field_ts_tcp.toml  test_input1.py  test_input1.txt
log-ship/samples/: fortinet_log.syslog
log-ship/src/: config_file.rs  event.rs  journald.rs  lumberjack_decoder.rs  main.rs  plugin.rs
log-ship/src/common/: config_utils.rs  logging.rs  mod.rs
log-ship/src/plugins/: file.rs  fortinet.rs  insert_field.rs  insert_ts.rs  journald.rs  logfmt.rs  lumberjack.rs  metrics.rs  mod.rs  python.rs  speed.rs  stdio.rs  syslog.rs  tcp_socket.rs  udp_socket.rs  unix_socket.rs
site/: .gitignore  package.json
site/docs/: config.md  download.md  index.md  integrations.md  intro.md  running.md
site/docs/.vitepress/: config.js
site/docs/.vitepress/theme/: index.js
